--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -57,3 +57,5 @@ spec:
             - name: http
               containerPort: {{ .Values.portContainer }}
               protocol: TCP
+            resources:
+              {{- toYaml .Values.backend.portalmaintenance.resources | nindent 16 }}
