--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -273,3 +273,5 @@ spec:
             - name: http
               containerPort: {{ .Values.portContainer }}
               protocol: TCP
+            resources:
+              {{- toYaml .Values.backend.processesworker.resources | nindent 16 }}
