--- a/charts/portal/templates/deployment-frontend-assets.yaml
+++ b/charts/portal/templates/deployment-frontend-assets.yaml
@@ -36,7 +36,11 @@ spec:
       containers:
       - name: {{ .Values.frontend.assets.name }}
         securityContext:
-          {{- toYaml .Values.securityContext | nindent 12 }}
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+          runAsNonRoot: true
         image: {{ .Values.frontend.assets.image.name }}:{{ .Values.frontend.assets.image.assetstag | default .Chart.AppVersion }}
         imagePullPolicy: "Always"
         ports:
