--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -63,6 +63,33 @@ frontend:
               service: "assets"
               port: 8080
 
+  portal:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+
+  registration:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+
+  assets:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 100m
+        memory: 128Mi
+
 backend:
   ingress:
     enabled: true
@@ -125,6 +152,13 @@ backend:
   registration:
     logging:
       registrationServiceBpn: "Debug"
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     healthChecks:
       startup:
         tags:
@@ -138,6 +172,13 @@ backend:
     logging:
       businessLogic: "Debug"
       sdfactoryLibrary: "Debug"
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     healthChecks:
       startup:
         tags:
@@ -165,6 +206,13 @@ backend:
   appmarketplace:
     logging:
       offersLibrary: "Debug"
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     healthChecks:
       startup:
         tags:
@@ -175,10 +223,33 @@ backend:
     swaggerEnabled: true
 
   portalmigrations:
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     seeding:
       testDataEnvironments: "consortia"
 
+  portalmaintenance:
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
+
   notification:
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     healthChecks:
       startup:
         tags:
@@ -191,6 +262,13 @@ backend:
   services:
     logging:
       offersLibrary: "Debug"
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     healthChecks:
       startup:
         tags:
@@ -207,6 +285,13 @@ backend:
       clearinghouseLibrary: "Debug"
       custodianLibrary: "Debug"
       sdfactoryLibrary: "Debug"
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
     bpdm:
       clientId: "<path:portal/data/processes-worker#bpdm-client-id>"
       clientSecret: "<path:portal/data/pen/processes-worker#bpdm-client-secret>"
@@ -223,6 +308,15 @@ backend:
     offerProvider:
       clientId: "<path:portal/data/processes-worker#offerprovider-client-id>"
       clientSecret: "<path:portal/data/beta/processes-worker#offerprovider-client-secret>"
+
+  provisioningmigrations:
+    resources:
+      limits:
+        cpu: 250m
+        memory: 256Mi
+      requests:
+        cpu: 250m
+        memory: 256Mi
 
 postgresql:
   auth:
