chore(QG-checks): improve helm chart (#27)
- enable resource configuration per service
- set resources for consortia environments
- hardcode security context
Why:
it's common to change cpu and memory per service and not per helm chart
https://github.com/eclipse-tractusx/portal-frontend-registration/issues/15#issuecomment-1538384814

--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -32,7 +32,11 @@ spec:
           containers:
           - name: {{ .Values.backend.processesworker.name }}
             securityContext:
-              {{- toYaml .Values.securityContext | nindent 16 }}
+              allowPrivilegeEscalation: false
+              capabilities:
+                drop:
+                - ALL
+              runAsNonRoot: true
             image: "{{ .Values.backend.processesworker.image.name }}:{{ .Values.backend.processesworker.image.processesworkertag | default .Chart.AppVersion }}"
             imagePullPolicy: "Always"
             env:
@@ -273,3 +277,5 @@ spec:
             - name: http
               containerPort: {{ .Values.portContainer }}
               protocol: TCP
+            resources:
+              {{- toYaml .Values.backend.processesworker.resources | nindent 14 }}
