fix(config): marketplace uploadDocumentTypeIds

--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -115,37 +115,37 @@ spec:
         - name: "APPMARKETPLACE__CATENAADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.catenaAdminRoles.role0 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.type2 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId0 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__0__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds0.mediaTypeId0 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__1__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.type3 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId1 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds1.mediaTypeId0 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__1"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds1.mediaTypeId1 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__2"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds1.mediaTypeId2 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__2__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.type4 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId2 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__2__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds2.mediaTypeId0 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__2__MEDIATYPES__1"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds2.mediaTypeId1 }}"
+        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__2__MEDIATYPES__2"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds2.mediaTypeId2 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.type0 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId3 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting1 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__MEDIATYPES__1"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting2 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__3__MEDIATYPES__2"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting3 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds3.mediaTypeId0 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.type1 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId4 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting1 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__MEDIATYPES__1"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting2 }}"
-        - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__4__MEDIATYPES__2"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting3 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds4.mediaTypeId0 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__5__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.type5 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId5 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__5__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.setting0 }}"
+          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds5.mediaTypeId0 }}"
         - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.deleteDocumentTypeIds.type0 }}"
         - name: "APPMARKETPLACE__DELETEDOCUMENTTYPEIDS__1"
