fix backend-service uploadServiceDocumentTypeIds

--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -148,18 +148,18 @@ spec:
           value: "{{ .Values.backend.clients.portal }}"
         - name: "SERVICES__CATENAADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.catenaAdminRoles.role0 }}"
-        - name: "SERVICES__UPLOADAPPDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId0 }}"
-        - name: "SERVICES__UPLOADAPPDOCUMENTTYPEIDS__0__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds0.mediaTypeId0 }}"
-        - name: "SERVICES__UPLOADAPPDOCUMENTTYPEIDS__1__DOCUMENTTYPEID"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.documentTypeId1 }}"
-        - name: "SERVICES__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__0"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds1.mediaTypeId0 }}"
-        - name: "SERVICES__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__1"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds1.mediaTypeId1 }}"
-        - name: "SERVICES__UPLOADAPPDOCUMENTTYPEIDS__1__MEDIATYPES__2"
-          value: "{{ .Values.backend.appmarketplace.uploadAppDocumentTypeIds.mediaTypeIds1.mediaTypeId2 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.documentTypeId0 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__0__MEDIATYPES__0"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.mediaTypeIds0.mediaTypeId0 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__DOCUMENTTYPEID"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.documentTypeId1 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__MEDIATYPES__0"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.mediaTypeIds1.mediaTypeId0 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__MEDIATYPES__1"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.mediaTypeIds1.mediaTypeId1 }}"
+        - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__1__MEDIATYPES__2"
+          value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.mediaTypeIds1.mediaTypeId2 }}"
         - name: "SERVICES__ITADMINROLES__0__CLIENTID"
           value: "{{ .Values.backend.clients.portal }}"
         - name: "SERVICES__ITADMINROLES__0__USERROLENAMES__0"
