--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -65,27 +65,27 @@ frontend:
 
   portal:
     resources:
-      limits:
-        cpu: 100m
-        memory: 128Mi
+#       limits:
+#         cpu: 100m
+#         memory: 128Mi
       requests:
         cpu: 100m
         memory: 128Mi
 
   registration:
     resources:
-      limits:
-        cpu: 100m
-        memory: 128Mi
+#       limits:
+#         cpu: 100m
+#         memory: 128Mi
       requests:
         cpu: 100m
         memory: 128Mi
 
   assets:
     resources:
-      limits:
-        cpu: 100m
-        memory: 128Mi
+#       limits:
+#         cpu: 100m
+#         memory: 128Mi
       requests:
         cpu: 100m
         memory: 128Mi
@@ -153,9 +153,9 @@ backend:
     logging:
       registrationServiceBpn: "Debug"
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -173,9 +173,9 @@ backend:
       businessLogic: "Debug"
       sdfactoryLibrary: "Debug"
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -207,9 +207,9 @@ backend:
     logging:
       offersLibrary: "Debug"
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -224,9 +224,9 @@ backend:
 
   portalmigrations:
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -235,18 +235,18 @@ backend:
 
   portalmaintenance:
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
 
   notification:
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -263,9 +263,9 @@ backend:
     logging:
       offersLibrary: "Debug"
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -286,9 +286,9 @@ backend:
       custodianLibrary: "Debug"
       sdfactoryLibrary: "Debug"
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
@@ -311,9 +311,9 @@ backend:
 
   provisioningmigrations:
     resources:
-      limits:
-        cpu: 250m
-        memory: 256Mi
+#       limits:
+#         cpu: 250m
+#         memory: 256Mi
       requests:
         cpu: 250m
         memory: 256Mi
